hphp/hack/test/typecheck/noreturn_typehint_basic_bad1.php.exp
File "noreturn_typehint_basic_bad1.php", line 3, characters 10-17:
Invalid return type (Typing[4336])
  File "noreturn_typehint_basic_bad1.php", line 3, characters 22-29:
  Expected `noreturn`
  File "noreturn_typehint_basic_bad1.php", line 3, characters 10-17:
  But got `void` because this function does not always return a value
